<resources>
    <string name="app_name">CalcApp</string>
    <string name="calc_hint">Calculation</string>
    <string name="res_hint">Input</string>

    <string name="del_btn">DEL</string>
    <string name="reverse_btn">1/x</string>
    <string name="power_btn">^</string>
    <string name="plus_btn">+</string>
    <string name="nine_btn">9</string>
    <string name="eight_btn">8</string>
    <string name="seven_btn">7</string>
    <string name="minus_btn">-</string>
    <string name="six_btn">6</string>
    <string name="five_btn">5</string>
    <string name="four_btn">4</string>
    <string name="multiply_btn">×</string>
    <string name="three_btn">3</string>
    <string name="two_btn">2</string>
    <string name="one_btn">1</string>
    <string name="divide_btn">÷</string>
    <string name="percent_btn">%</string>
    <string name="zero_btn">0</string>
    <string name="dot_btn">.</string>
    <string name="equals_btn">=</string>
</resources>